--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<h1>Time and Space Complexity</h1>
-	<p>Time Complexity, a measure of how an algorithm's execution time scales with input size, is crucial for designing efficient algorithms, and is often expressed using Big O notation. </p>
+	<p>Time complexity, a measure of how an algorithm's execution time scales with input size, is crucial for designing efficient algorithms, and is often expressed using Big O notation. </p>
 	<p><b>Space complexity,</b> is essentially a parallel concept to time complexity. If you need to create an array of size n, this will take O(n) space.</p>
     <script type="text/javascript" src="./script.js"></script>
 
